kubernetes/apps/default/zwave/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave
  namespace: default
  labels:
    app.kubernetes.io/name: zwave
    app.kubernetes.io/instance: zwave
    app.kubernetes.io/controller: zwave
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: zwave
      app.kubernetes.io/instance: zwave
      app.kubernetes.io/controller: zwave
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zwave
        app.kubernetes.io/instance: zwave
        app.kubernetes.io/controller: zwave
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: app
          image: ghcr.io/zwave-js/zwave-js-ui:11.15.1
          ports:
            - name: http
              containerPort: 80
            - name: websocket
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /health/
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /usr/src/app/store
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: zwave
        - name: tmp
          emptyDir: {}
