kubernetes/apps/default/zwave/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
  namespace: default
  labels:
    app.kubernetes.io/name: zwave
    app.kubernetes.io/instance: zwave
    app.kubernetes.io/controller: zwave
    app.kubernetes.io/service: zwave
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websocket
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: zwave
    app.kubernetes.io/instance: zwave
    app.kubernetes.io/controller: zwave
