kubernetes/apps/default/zwave/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwave
  namespace: default
  annotations:
    gatus.home-operations.com/endpoint: |-
      dns:
        query-name: zwave.unscfleet.com
        query-type: A
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - zwave.unscfleet.com
  rules:
    - backendRefs:
        - name: zwave
          port: 80
